# typeid_prefix

./: .gitignore  Cargo.toml  README - Copy.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_type_id_prefix.rs
src/: error.rs  lib.rs  traits.rs  type_id_prefix.rs
src/traits/: prefix_factory.rs  validate.rs
tests/: proofs.rs  proptests.rs  serde_tests.rs
