[package]
name = "typeid_prefix"
version = "1.0.4"
edition = "2021"
authors = ["rrrodzilla@proton.me"]
description = "A Rust library that implements a type-safe version of the TypePrefix section of the `TypeID` Specification"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GovCraft/typeid_prefix"
documentation = "https://docs.rs/typeid_prefix"
readme = "README.md"
keywords = ["typeid", "prefix", "validation", "sanitization"]
categories = ["data-structures", "development-tools"]

[features]
default = []
instrument = ["tracing"]
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"], optional = true}
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
proptest = { version = "1.5.0", features = ["proptest-macro"] }
arbitrary = { version = "1.3.2", features = ["derive"]}

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
pedantic = {level = "warn", priority = -1 }
nursery = {level = "warn", priority = -1 }
module_name_repetitions = "allow"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]