[package]
name = "typeid_prefix-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.0", features = ["arbitrary-derive"] }
arbitrary = { version = "1.3.2", features = ["derive"], optional = true }
typeid_prefix = { path ="../.", features = ["arbitrary"]}

[[bin]]
name = "fuzz_typeid_prefix"
path = "fuzz_targets/fuzz_typeid_prefix.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[features]
arbitrary = ["dep:arbitrary"]
